--- a/CodeCrafters/about/About.html
+++ b/CodeCrafters/about/About.html
@@ -132,7 +132,8 @@
         Join us in our mission to revolutionize waste management and create a
         sustainable future. <br />
         <br />
-        <a href=""><button>Get Involved</button> </a>
+        <a href="/CodeCrafters/register/register.html"><button>Get Involved</button> </a>
+        <a href="/CodeCrafters/homepage/index.html"><button>Home</button> </a>
       </footer>
     </div>
   </body>
