--- a/CodeCrafters/homepage/index.html
+++ b/CodeCrafters/homepage/index.html
@@ -179,7 +179,7 @@
         </div>
         </div>
     </div>
-      <a href="services.html" class="btn fw-bold text-center p-3" style="background-color: #00ffff; color: #000; font-family: Roboto, sans-serif;">More on Services</a>
+      <a href="/CodeCrafters/services/services.html" class="btn fw-bold text-center p-3" style="background-color: #00ffff; color: #000; font-family: Roboto, sans-serif;">More on Services</a>
 </div>
 </section>
 <!--END OF SERVICES SECTION-->
