--- a/CodeCrafters/claim.html
+++ b/CodeCrafters/claim.html
@@ -249,6 +249,7 @@
 						</label>
 						<div class="w-100"></div>
 						<a href="#" class="btn mt-4 mb-5"><i class="uil uil-ticket size-22 mr-2"></i>Claim Reward </a>
+						<a href="/CodeCrafters/homepage/index.html" class="btn mt-4 mb-5"><i class="uil uil-ticket size-22 mr-2"></i>Home </a>
 						
 					</div>	
 				</div>
