--- a/CodeCrafters/homepage/index.html
+++ b/CodeCrafters/homepage/index.html
@@ -86,7 +86,7 @@
 
                 <div class="others mx-md-3 my-2">
                   <a href="../claim.html" class="fw-bold text-white mt-md-2 me-md-2 text-decoration-none claim">CLAIM REWARDS</a>
-                  <a href="../checkcredit.html" class="fw-bold text-white mt-md-2 me-md-2 text-decoration-none">CHECK CREDIT</a>
+                  <a href="../register/register.html" class="fw-bold text-white mt-md-2 me-md-2 text-decoration-none">SCHEDULE PICKUP</a>
                 </div>
 
             <div class="d-flex">
