--- a/CodeCrafters/services/services.html
+++ b/CodeCrafters/services/services.html
@@ -22,7 +22,7 @@
       <div class="container">
         <h2>Our Services</h2>
         <li>
-          <a  href="/homepage/index.html">HOME</a>
+          <a  href="/CodeCrafters/homepage/index.html">HOME</a>
           </li>
         <div class="service">
           <img src="./images/waste.jpg" alt="Customized Waste Disposal" />
