--- a/CodeCrafters/register/register.html
+++ b/CodeCrafters/register/register.html
@@ -24,23 +24,21 @@
                     
                 </div>
                 <div class="input-field">
+                    <label class="top">Choose purpose:</label>
+                    <select required>
+                        <option>Personal</option>
+                        <option>Organization</option>
+                    </select>
                     
                 <input type="text" placeholder="Username" required>
                 </div>
                 <input
                 type="text"
-                placeholder="FirstName"
-                name="firstName"
-                id="firstName"
+                placeholder="FullName"
+                name="fullName"
+                id="fullName"
                 required
               />
-              <input
-              type="text"
-              placeholder="lastName"
-              name="lastName"
-              id="lastName"
-              required
-            />
                 <input type="email" placeholder="Email" required>
                 <input type="password" placeholder="Password" required>
                 <input
@@ -63,6 +61,11 @@
                     <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email password</span>
+                <label class="top">User Type:</label>
+                <select required>
+                    <option>Personal</option>
+                    <option>Organization</option>
+                </select>
                 <input type="email" placeholder="Email" required>
                 <input type="password" placeholder="Password" required>
                 <a href="#">Forgot Password?</a>
