--- a/CodeCrafters/register/register.html
+++ b/CodeCrafters/register/register.html
@@ -61,11 +61,12 @@
                     <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email password</span>
-                <label class="top">User Type:</label>
-                <select required>
-                    <option>Personal</option>
-                    <option>Organization</option>
-                </select>
+                <label class="top"> Select user type
+                    <select required>
+                        <option>Personal</option>
+                        <option>Organization</option>
+                    </select> 
+                </label>
                 <input type="email" placeholder="Email" required>
                 <input type="password" placeholder="Password" required>
                 <a href="#">Forgot Password?</a>
