--- a/CodeCrafters/register/register.html
+++ b/CodeCrafters/register/register.html
@@ -63,7 +63,8 @@
                 <input type="email" placeholder="Email" required>
                 <input type="password" placeholder="Password" required>
                 <a href="#">Forgot Password?</a>
-                <button>Sign In</button>
+               <button><a href="/CodeCrafters/homepage/schedule.html">Sign In</a></button> 
+
             </form>
         </div>
         <div class="toggle-container">
@@ -71,7 +72,7 @@
                 <div class="toggle-panel toggle-left">
                     <h1>Welcome ✨😍</h1>
                     <p>Already have an account</p>
-                    <button class="hidden" id="login">Sign In</button>
+                    <button>Sign In</button>
                 </div>
                 <div class="toggle-panel toggle-right">
                     <h1>Hello, Friend!</h1>
