--- a/CodeCrafters/register/register.html
+++ b/CodeCrafters/register/register.html
@@ -72,7 +72,7 @@
                 <div class="toggle-panel toggle-left">
                     <h1>Welcome ✨😍</h1>
                     <p>Already have an account</p>
-                    <button>Sign In</button>
+                    <button class="hidden" id="login">Sign In</button>
                 </div>
                 <div class="toggle-panel toggle-right">
                     <h1>Hello, Friend!</h1>
