--- a/CodeCrafters/about/About.html
+++ b/CodeCrafters/about/About.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us | CodeCrafters Zero Waste - Revolutionizing Waste Management</title>
-    <link rel="icon" href="/CodeCrafters/images/logo.png" />
+    <link rel="icon" href="../images/logo.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="/CodeCrafters/homepage/style.css">
+    <link rel="stylesheet" href="../homepage/style.css">
      <style>
       .showcase {
     width: 100%;
@@ -81,7 +81,7 @@
             </li>
     
             <li class="nav-item mx-md-3">
-            <a class="nav-link text-white fw-bold" href="services/services.html">SERVICES</a>
+            <a class="nav-link text-white fw-bold" href="/CodeCrafters/services/services.html">SERVICES</a>
             </li>
 
             <li class="nav-item mx-md-3">
@@ -90,13 +90,16 @@
 
 
             <li class="nav-item mx-md-3">
-            <a class="nav-link text-white fw-bold" href="/CodeCrafters/homepage/index.html">CONTACT US</a>
+            <a class="nav-link text-white fw-bold" href="/CodeCrafters/services/services.html">CONTACT US</a>
             </li>
 
             <li class="nav-item mx-md-3">
               <a class="nav-link text-white fw-bold" href="../claim.html">CLAIM REWARDS</a>
               </li>
 
+              <li class="nav-item mx-md-3">
+                <a class="nav-link text-white fw-bold" href="../checkcredit.html">CHECK CREDIT</a>
+                </li>
             </ul>
 
         <div class="d-flex">
@@ -112,7 +115,7 @@
 
 <!--IMAGE-->
 <div class="showcase" >
-  <img src="about1.jpg" alt="Picture">
+  <img src="../images/about1.jpg" alt="Picture">
   <div class="overlay">
   <h2 class="fw-bold">ABOUT US</h2>
   </div>
@@ -200,13 +203,13 @@
   <div class="col-md-6">
       <div class="row">
           <div class="col-md-12 my-2">
-          <img class="img-fluid" src="about1.jpg" style="height: 300px; width: 100%;">
+          <img class="img-fluid" src="../images/about1.jpg" style="height: 300px; width: 100%;">
           </div>
           <div class="col-md-6 my-2">
-              <img class="img-fluid" src="about2.jpg" style="height: 250px; width: 100%;">
+              <img class="img-fluid" src="../images/about2.jpg" style="height: 250px; width: 100%;">
           </div>
           <div class="col-md-6 my-2">
-              <img class="img-fluid" src="about3.jpg" style="height: 250px; width: 100%;">
+              <img class="img-fluid" src="../images/about3.jpg" style="height: 250px; width: 100%;">
           </div>
       </div>
   </div>
@@ -225,7 +228,7 @@
               </div>
           </div>
           <div class="col-md-6">
-              <img src="mission.jpeg" class="img-fluid">
+              <img src="../images/mission.jpeg" class="img-fluid">
           </div>
       </div>
     </div>  
@@ -243,7 +246,7 @@
                   </div>
               </div>
               <div class="col-md-6">
-                  <img src="vision.png" class="img-fluid">
+                  <img src="../images/vision.png" class="img-fluid">
               </div>
           </div>
         </div>  
@@ -290,7 +293,7 @@
               <div class="col-xl-4 col-lg-4 mb-50">
                   <div class="footer-widget">
                       <div class="footer-logo">
-                          <a href="#"><img src="../images/logo2.png" class="img-fluid" alt="logo" style="height: 110px; width: 120px;"></a>
+                          <a href="#"><img src="images/logo2.png" class="img-fluid" alt="logo" style="height: 110px; width: 120px;"></a>
                       </div>
                       <div class="footer-text">
                           <p>Codecrafters Waste Management provides innovative and sustainable solutions for waste handling and recycling. Our services focus on minimizing environmental impact through efficient waste collection, advanced recycling technologies, and eco-friendly practices. </p>
@@ -313,8 +316,8 @@
                       <ul>
                           <li><a href="index.html">Home</a></li>
                           <li><a href="aboutus.html">About us</a></li>
-                          <li><a href="../services/services.html">Our Services</a></li>
-                          <li><a href="/CodeCrafters/homepage/index.html">Contact us</a></li>
+                          <li><a href="services.html">Our Services</a></li>
+                          <li><a href="contactus.html">Contact us</a></li>
                       </ul>
                   </div>
               </div>
