all field updated

--- a/CodeCrafters/services/services.html
+++ b/CodeCrafters/services/services.html
@@ -152,6 +152,11 @@
               class="fw-bold text-white mt-md-2 me-md-2 text-decoration-none claim"
               >CLAIM REWARDS</a
             >
+            <a
+              href="/CodeCrafters/register/register.html"
+              class="fw-bold text-white mt-md-2 me-md-2 text-decoration-none"
+              >SCHEDULE PICKUP</a
+            >
           </div>
 
           <div class="d-flex">
