--- a/kipClean/services/services.html
+++ b/kipClean/services/services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CodeCrafters/Services</title>
+    <title>KipCleans/Services</title>
     <link rel="icon" href="../images/logo.png" />
     <link rel="stylesheet" href="services.css" />
     <link
@@ -32,7 +32,7 @@
             <i class="fas fa-phone px-3 pt-2" style="color: #006b5d"></i>
             <p class="fw-bold text-dark">
               CALL US<br />
-              (+234)8165896542
+              (+234)8104578412
             </p>
           </div>
         </div>
@@ -42,7 +42,7 @@
             <i class="fas fa-envelope px-3 pt-2" style="color: #006b5d"></i>
             <p class="fw-bold text-dark">
               EMAIL US<br />
-              contactus@codecrafters.com
+              contactus@KipCleans.com
             </p>
           </div>
         </div>
@@ -153,7 +153,7 @@
               >CLAIM REWARDS</a
             >
             <a
-              href="/CodeCrafters/register/register.html"
+              href="/KipCleans/register/register.html"
               class="fw-bold text-white mt-md-2 me-md-2 text-decoration-none"
               >SCHEDULE PICKUP</a
             >
@@ -272,7 +272,7 @@
                 <i class="fas fa-map-marker-alt"></i>
                 <div class="cta-text">
                   <h4>Find us</h4>
-                  <span>12, Abba Adamu Road, Abuja</span>
+                  <span>125,Olufoam,Akure,Ondo State</span>
                 </div>
               </div>
             </div>
@@ -281,7 +281,7 @@
                 <i class="fas fa-phone"></i>
                 <div class="cta-text">
                   <h4>Call us</h4>
-                  <span>(+234)8165896542</span>
+                  <span>(+234)8104578412</span>
                 </div>
               </div>
             </div>
@@ -290,7 +290,7 @@
                 <i class="far fa-envelope-open"></i>
                 <div class="cta-text">
                   <h4>Mail us</h4>
-                  <span>contactus@codecrafters.com</span>
+                  <span>contactus@KipCleans.com</span>
                 </div>
               </div>
             </div>
@@ -311,7 +311,7 @@
                 </div>
                 <div class="footer-text">
                   <p>
-                    Codecrafters Waste Management provides innovative and
+                    KipCleans Waste Management provides innovative and
                     sustainable solutions for waste handling and recycling. Our
                     services focus on minimizing environmental impact through
                     efficient waste collection, advanced recycling technologies,
@@ -370,7 +370,7 @@
               <div class="copyright-text">
                 <p>
                   Copyright &copy; 2024, All Right Reserved
-                  <a href="#">CodeCrafters</a>
+                  <a href="#">KipCleans</a>
                 </p>
               </div>
             </div>
